--- a/attachment_delete_restrict/views/res_users_views.xml
+++ b/attachment_delete_restrict/views/res_users_views.xml
@@ -13,8 +13,8 @@
                     <group>
                         <field
                             name="delete_attachment_model_ids"
-                            domain="[('restrict_delete_attachment', '=', 'none')]"
-                            nolabel="1"
+                            domain="[('restrict_delete_attachment', 'in', ['custom', 'owner_custom'])]"
+                            widget="many2many_tags"
                         />
                     </group>
                 </page>
