--- a/base_changeset/views/changeset_field_rule_views.xml
+++ b/base_changeset/views/changeset_field_rule_views.xml
@@ -5,7 +5,7 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="model_id" />
-                <field name="field_id" />
+                <field name="field_id" options="{'no_create': True}" />
                 <field name="source_model_id" />
                 <field name="expression" />
                 <field name="validator_group_ids" />
