--- a/base_search_fuzzy/views/trgm_index.xml
+++ b/base_search_fuzzy/views/trgm_index.xml
@@ -22,7 +22,7 @@
         <field name="name">trgm.index.view.tree</field>
         <field name="model">trgm.index</field>
         <field name="arch" type="xml">
-            <tree string="Trigram Index">
+            <tree>
                 <field name="field_id" />
                 <field name="index_name" />
                 <field name="index_type" />
