--- a/base_fontawesome/templates/assets.xml
+++ b/base_fontawesome/templates/assets.xml
@@ -4,7 +4,7 @@ Copyright 2017 Simone Orsi
 License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl.html).
 -->
 <odoo>
-    <template id="assets_common" inherit_id="web.assets_common">
+    <template id="assets_common" inherit_id="web.assets_common" priority="99">
         <xpath
             expr="link[@href='/web/static/lib/fontawesome/css/font-awesome.css']"
             position="replace"
@@ -36,7 +36,11 @@ License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl.html).
             />
         </xpath>
     </template>
-    <template id="report_assets_common" inherit_id="web.report_assets_common">
+    <template
+        id="report_assets_common"
+        inherit_id="web.report_assets_common"
+        priority="99"
+    >
         <xpath
             expr="link[@href='/web/static/lib/fontawesome/css/font-awesome.css']"
             position="replace"
