--- a/base_kanban_stage/views/base_kanban_abstract.xml
+++ b/base_kanban_stage/views/base_kanban_abstract.xml
@@ -23,7 +23,7 @@
                 <templates>
                     <t t-name="kanban-box">
                         <div
-                            t-attf-class="oe_kanban_color_#{kanban_getcolor(record.kanban_color.raw_value)} o_kanban_record oe_kanban_global_click"
+                            t-attf-class="oe_kanban_color_#{kanban_getcolor(record.kanban_color.raw_value)} oe_kanban_global_click"
                         >
                             <div
                                 class="o_dropdown_kanban dropdown"
@@ -59,10 +59,7 @@
                                 </ul>
                             </div>
                             <div class="o_kanban_title" name="card_header">
-                                <field
-                                    name="kanban_status"
-                                    widget="kanban_state_selection"
-                                />
+                                <field name="kanban_status" widget="state_selection" />
                             </div>
                             <div class="oe_kanban_details" name="card_body">
                                 <!-- Child modules should add model-specific data here -->
