--- a/base_custom_info/views/res_partner_view.xml
+++ b/base_custom_info/views/res_partner_view.xml
@@ -25,7 +25,8 @@
                             colspan="4"
                             nolabel="1"
                             mode="custom_info"
-                        />
+                        >
+                        </field>
                     </group>
                 </page>
             </xpath>
