--- a/base_custom_info/views/custom_info_template_view.xml
+++ b/base_custom_info/views/custom_info_template_view.xml
@@ -24,13 +24,12 @@
                         <field name="model" />
                         <field name="model_id" />
                     </group>
-                    <group name="Properties">
-                        <field
-                            name="property_ids"
-                            nolabel="1"
-                            context="{'form_view_ref': 'base_custom_info.custom_info_property_form', 'tree_view_ref': 'base_custom_info.custom_info_property_tree'}"
-                        />
-                    </group>
+                    <separator string="Properties" />
+                    <field
+                        name="property_ids"
+                        nolabel="1"
+                        context="{'form_view_ref': 'base_custom_info.custom_info_property_form', 'tree_view_ref': 'base_custom_info.custom_info_property_tree'}"
+                    />
                 </sheet>
             </form>
         </field>
