[IMP] Allow to delete attachment without res_model But allow it only if a file pattern is set, to avoid deleting all orphan attachments are some are auto-generated by Odoo

--- a/autovacuum_message_attachment/views/rule_vacuum.xml
+++ b/autovacuum_message_attachment/views/rule_vacuum.xml
@@ -39,6 +39,10 @@
                         <group attrs="{'invisible': [('ttype', '!=', 'attachment')]}">
                             <field name="filename_pattern" />
                             <field name="inheriting_model" />
+                            <field
+                                name="empty_model"
+                                attrs="{'invisible': ['|', ('model_ids', '!=', []), ('filename_pattern', '=', False)]}"
+                            />
                         </group>
                         <group string="Models">
                             <field name="model_ids" nolabel="1" colspan="4" />
